net/mullvad: various things
lots of small changes

--- a/net/mullvad/src/opnsense/service/conf/actions.d/actions_mullvad.conf
+++ b/net/mullvad/src/opnsense/service/conf/actions.d/actions_mullvad.conf
@@ -35,21 +35,21 @@
 ################################################################################
 
 [login]
-#command: echo '{"device_name": "winged buffalo","ipv4_address": "10.67.122.255/32","ipv6_address": "fc00:bbbb:bbbb:bb01::4:7afe/128","private_key": "SDd3s/22ixkhCMNjewibkPUE/Rj17JoS8dmfxsx9Y0o=","public_key": "ccHOGyAuDW7sgaNa8o6UyiLFr2M52RjkZWwnMLUqFi4=","result": "success"}'
+command: echo '{"device_name": "winged buffalo","ipv4_address": "10.67.122.255/32","ipv6_address": "fc00:bbbb:bbbb:bb01::4:7afe/128","private_key": "SDd3s/22ixkhCMNjewibkPUE/Rj17JoS8dmfxsx9Y0o=","public_key": "ccHOGyAuDW7sgaNa8o6UyiLFr2M52RjkZWwnMLUqFi4=","result": "success"}'
+parameters: # login --account %s --pubkey %s
+#command:
+#    /usr/local/opnsense/scripts/OPNsense/Mullvad/account.py
 #parameters: login --account %s --pubkey %s
-command:
-    /usr/local/opnsense/scripts/OPNsense/Mullvad/account.py
-parameters: login --account %s --pubkey %s
 type:script_output
 message: mullvad: performing login for account: "%s"/"%s"
 description: mullvad: Perform login for account: "%s"/"%s"
 
 [logout]
-#command: echo '{"result": "revoked"}'
-#parameters: # logout --account %s --pubkey %s
-command:
-    /usr/local/opnsense/scripts/OPNsense/Mullvad/account.py
-parameters: logout --account %s --pubkey %s
+command: echo '{"result": "revoked"}'
+parameters: # logout --account %s --pubkey %s
+#command:
+#    /usr/local/opnsense/scripts/OPNsense/Mullvad/account.py
+#parameters: logout --account %s --pubkey %s
 type:script_output
 message: mullvad: performing login for account/pubkey: "%s"/"%s
 description: mullvad: Perform login for account/pubkey: "%s"/%s
